--- a/src/HomePage/BillboardTwo.css
+++ b/src/HomePage/BillboardTwo.css
@@ -55,7 +55,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow-y: hidden;
+  overflow: hidden;
   background-color: black;
   color: white;
   white-space: nowrap;
